--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
 }
 
 #buttons .row {
-  border: 1px solid magenta;
+  /* border: 1px solid magenta; */
   display: flex;
   aspect-ratio: 4 / 1;
   flex: 1 1 1;
